--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <form action="#">
-            <h1 class="btn btn-primary btn-xl js-scroll-trigger" href="login/index.html_in">login</h1>
+            <h1>login</h1>
             <!-- 入力エリア-->
             <p><i class="fas fa-envelope"></i><input class="inputMail" type="email" placeholder="Mail"></p>
             <p><i class="fas fa-key"></i><input class="inputPswd" type="password" placeholder="Password"></p>
