--- a/index.html
+++ b/index.html
@@ -16,4 +16,5 @@
             <p class="forget"><a href="#" class="forgetText">パスワード忘れた方はこちら</a></p>
         </form>
     </body>
+    <script src="script.js" defer></script>
 </html>
